c/examples/gcc/testsuite/c-c++-common/gomp/has-include-1.c
/* { dg-do compile } */

void
foo (void)
{
#pragma omp parallel if (__has_include ("<stdlib.h>"))	/* { dg-error "used outside of preprocessing directive" } */
  ;
}
